spacing fixes

--- a/files/css/toolblue.css
+++ b/files/css/toolblue.css
@@ -372,7 +372,7 @@ body {
 
 .down-section {
 	width: 100%;
-	padding-bottom: 50px;
+	padding-bottom: 50px;	padding-top: 50px;
 	background: white;
 }
 
@@ -588,7 +588,7 @@ body {
 	width: 100%;
 	background: var(--tcol);
 	/*padding-bottom: 80px;*/
-	padding: 50px 0 50px 0;
+	padding: 50px 0 100px 0;
 }
 
 .f-container {
