--- a/files/css/toolpurple.css
+++ b/files/css/toolpurple.css
@@ -372,6 +372,7 @@ body {
 .down-section {
 	width: 100%;
 	padding-bottom: 50px;
+	padding-top: 50px;
 	background: white;
 }
 
@@ -586,8 +587,7 @@ body {
 .f-section {
 	width: 100%;
 	background: var(--tcol);
-	/*padding-bottom: 80px;*/
-	padding: 50px 0 50px 0;
+	padding: 50px 0 100px 0;
 }
 
 .f-container {
