--- a/files/css/toolred.css
+++ b/files/css/toolred.css
@@ -373,6 +373,8 @@ body {
 .down-section {
 	width: 100%;
 	padding-bottom: 50px;
+		padding-top: 50px;
+	
 	background: white;
 }
 
@@ -587,8 +589,7 @@ body {
 .f-section {
 	width: 100%;
 	background: var(--tcol);
-	/*padding-bottom: 80px;*/
-	padding: 50px 0 50px 0;
+	padding: 50px 0 100px 0;
 }
 
 .f-container {
